<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DominoPlusMinus</string>
    <string name="main_menu">Главное меню</string>
    <string name="end_round">Закончить раунд</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="stick">|</string>
    <string name="select_sign">Выберите знак</string>
    <string name="palindrome_sign">П</string>
    <string name="anti_palindrome_sign">АП</string>
    <string name="fish_sign">*</string>
    <string name="fish">рыба</string>
    <string name="save_game">Сохранить игру</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="under_construction">Функция в разработке</string>
    <string name="no_score">У вас нет бонусов!</string>
    <string name="not_enough_score">Не достаточно бонусов!</string>
    <string name="score_spend_dialog_1">Доступное игроку </string>
    <string name="score_spend_dialog_2">число бонусов: </string>
    <string name="score_spend_dialog_3">Выберите опцию</string>
    <string name="score_use">Применить</string>
    <string name="plus_point">Добавить 1 очко</string>
    <string name="minus_point">Отнять 1 очко</string>
    <string name="miss_turn">Пропустить ход</string>
    <string name="turn_sign_zero">Знак 0</string>
    <string name="turn_sign_plus">Знак +</string>
    <string name="turn_sign_minus">Знак -</string>
    <string name="revert_sign">Инверсия знака</string>
    <string name="available_score_options">Доступные\nопции:</string>
    <string name="score_options_aim">Цель:</string>
    <string name="score_selector">Инициатор</string>
    <string name="select_aim">Выберите цель!</string>
    <string name="select_score_selector">Выберите инициатора!</string>
    <string name="change_points">Поменяться очками</string>
    <string name="exorcism">Сеанс экзорцизма</string>
    <string name="use_bonuses">Использовать бонусы</string>
    <string name="game_saved">Игра сохранена</string>
    <string name="back">Назад</string>
    <string name="player1">Игрок 1</string>
    <string name="player2">Игрок 2</string>
    <string name="player3">Игрок 3</string>
    <string name="player4">Игрок 4</string>
    <string name="start_game">Начать игру</string>
    <string name="add_player">Добавить игрока</string>
    <string name="remove_player">Удалить игрока</string>
    <string name="start_date">Дата начала</string>
    <string name="number_of_rounds">Количество раундов</string>
    <string name="players">Игроки</string>
    <string name="delete_game">Удалить игру</string>
    <string name="load_game">Загрузить игру</string>
    <string name="attention">Внимание</string>
    <string name="delete_game_confirm">Вы действительно хотите удалить игру от</string>
    <string name="game_is_not_selected">Игра не выбрана</string>
    <string name="game_over">Игра окончена!</string>
    <string name="stat_report_1">"Статистика игры\nИгра начата "</string>
    <string name="stat_report_winner">"\nПобедитель "</string>
    <string name="stat_report_rounds">"\nСыграно раундов "</string>
    <string name="stat_report_player">Игрок</string>
    <string name="stat_report_points">Очков</string>
    <string name="stat_report_score">Бонусов</string>
    <string name="stat_report_score_earned">Получено бон.</string>
    <string name="stat_report_score_spent">Потрачено бон.</string>
    <string name="stat_report_wins">Побед</string>
    <string name="stat_report_fishes">Рыб</string>
    <string name="stat_report_palindrome">Палиндр.</string>
    <string name="stat_report_antipalindrome">Антипал.</string>
    <string name="stat_report_max_points">Макс. очков</string>
    <string name="stat_report_max_points2">Абсол. макс.</string>
    <string name="points_validation1">Ноль очков может быть только у одного игрока!</string>
    <string name="points_validation2">Рыбу может сделать только один игрок!</string>
    <string name="points_validation3">Отметьте человека который сделал рыбу!</string>
    <string name="points_validation4">Не может быть рыбы и игрока с нулем очков!</string>
    <string name="help">Помощь</string>
    <string name="new_game">Новая игра</string>

</resources>
